--- a/index.html
+++ b/index.html
@@ -123,10 +123,10 @@
             <div class="container py-5">
                 <div class="row g-4 d-flex justify-content-center">
                     <div class="col-md-6">
-                        <div class="card h-100" style="background-color: #eee;">
+                        <div class="card h-100" style="background-color: #eee; text-align: center; color: #A62639; font-weight: bold; font-size: 1.5em;">
                             <img src="img/localizacao.jpg" class="card-img-top" alt="Localização do Evento">
                             <div class="card-body text-center">
-                                <p class="card-text">Rua da Tatuagem, 123 - Bairro das Artes</p>
+                                <p class="card-text" style="color: black; font-weight: normal; font-size: 18px;">Rua da Tatuagem, 123 - Bairro das Artes</p>
                                 <a href="https://www.google.com/maps?q=Rua+da+Tatuagem,123,Bairro+das+Artes" class="btn btn-primary" target="_blank">Ver no Mapa</a>
                             </div>
                         </div>
