--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     </head>
     <body>
         <div>
-            <nav class="navbar navbar-expand-lg" style="background-color: #A62639;">
+            <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="#">
-                        <img src="img/logo.png" width="110" height="70">
+                        <img src="img/logo.png" width="110" height="70" alt="Logo">
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon" style="color: white;"></span>
+                        <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav ms-auto">
@@ -28,11 +28,11 @@
                             <li class="nav-item">
                                 <a class="nav-link text-white" href="#contato">Contato</a>
                             </li>
-                            <button type="button" class="btn btn-warning" onclick="window.location.href='#contato'">Garanta seu ingresso!</button>
+                            <button type="button" class="btn btn-warning">Garanta seu ingresso!</button>
                         </ul>
                     </div>
                 </div>
-            </nav>
+            </nav>            
         </div>
 
         <main>
@@ -173,7 +173,19 @@
                         </div>
                     </section>
         </main>
-        
+
+        <footer id="contato" class="text-center text-white py-4" style="background-color: #4E3629;">
+            <p>Siga-nos:</p>
+            <a href="#" class="text-white me-3">
+                <img src="instagram.png" alt="Instagram" width="30">
+            </a>
+            <a href="#" class="text-white">
+                <img src="facebook.png" alt="Facebook" width="30">
+            </a>
+            <p class="mt-3">Old Ink Tattoo Workshop © 2024</p>
+        </footer>
+
+
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     </body>
 </html>
